lib/stratiform/res/test/stratiform/corpus/neg/e115-unclosed-literal.tel
code
      EOF
this literal is never closed
